themes/main/src/sass/_opinion/other-opinions.scss
@import '_includes/query';
@import '_includes/variables';
@import '_includes/mixins';

#other-opinions{
  @include get-font(OTHER_OPINIONS);
  display: none;
  nav {
    ul {
      padding-left: 0;
      padding-bottom: 0;
      margin-bottom: 0;
      margin-top: 0;
      list-style: none;
      li {
        display: inline-block;
        border-bottom: 1px solid rgba(230,230,230, 0.7);
        padding-bottom: 5px;
        padding-top: 5px;
        &:first-child {
          margin-top: 5px;
        }
        &:last-child {
          border-bottom: none;
        }
      }
      .thumbnail-link{
        padding-left: 5%;
        float: left;
        width:  30%;
        img{
          border-radius: 50%;
          width: 100%;
          height: auto;
        }
      }
      .lead-link{
        float: left;
        padding-left: 5%;
        padding-right: 5%;
        margin: 10px 0;
        width: 55%;
        .name {
          color: $bdf-red;
        }
      }
    }
  }
  @include media-query(MEDIUM) {
    display: inline-block;
    float: left;
    width: 28%;
    max-width: 300px;
    padding: 0;
    border: 2px solid rgba(230,230,230, 0.7);

    h1 {
      color: $bdf-red;
      border: none;
      text-transform: uppercase;
      height: 25px;
      border-bottom: 1px solid $bdf-red;
      padding-left: 10px;
      margin-bottom: 0;
    }

    .name {
      margin-top: 0;
    }

    .title {
      color: $black-dark;
      span {
        color: $black-dark;
      }
    }
  }

  @include media-query(LARGE) {
    margin: 60px 0 0 50px;
  }
}

